--- a/src/main/resources/static/css/archive.css
+++ b/src/main/resources/static/css/archive.css
@@ -1,3 +1,16 @@
+@font-face {
+    font-family: "shaonv";
+    src: url('../font/shaonv.ttf');
+}
+@font-face {
+    font-family: "xiaodanchun";
+    src: url('../font/xiaodanchun.ttf');
+}
+@font-face {
+    font-family: "xionghaizi";
+    src: url('../font/xionghaizi.ttf');
+}
+
 .events_list {
     margin-top: 640px;
 }
@@ -43,7 +56,7 @@
     text-decoration: underline;
 }
 .VivaTimeline dl dt {
-    font-family: "xiaodanchun";
+    font-family: cursive;
     font-size: 22px;
 }
 .container {
