--- a/src/main/resources/static/css/forgetPassword.css
+++ b/src/main/resources/static/css/forgetPassword.css
@@ -1,3 +1,16 @@
+@font-face {
+    font-family: "shaonv";
+    src: url('../font/shaonv.ttf');
+}
+@font-face {
+    font-family: "xiaodanchun";
+    src: url('../font/xiaodanchun.ttf');
+}
+@font-face {
+    font-family: "xionghaizi";
+    src: url('../font/xionghaizi.ttf');
+}
+
 #msg-btn {
     margin-left: 30px;
     outline: none;
