--- a/src/main/resources/static/css/friends.css
+++ b/src/main/resources/static/css/friends.css
@@ -66,7 +66,7 @@
         margin-top: 10px;
         font-size: 22px;
         font-weight: bold;
-        font-family: "xiaodanchun";
+        font-family: cursive;
     }
     .link-text-introduce {
         line-height: 24px;
