--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -27,7 +27,7 @@
 <input id="articleId" type="hidden" th:value="${articleId}" />
 <div id="main-class-text">
     <!-- 主页大图 -->
-    <div id="table-picture" style="background-image: url('https://seaguller.oss-cn-beijing.aliyuncs.com/bk-1.jpg')"></div>
+    <div id="table-picture" style="background-image: url('https://seaguller.oss-cn-beijing.aliyuncs.com/static/bk-1.jpg')"></div>
     <!-- 标题栏 -->
     <div class="head-one">
         <header class="am-topbar am-topbar-inverse am-topbar-fixed-top">
@@ -99,7 +99,7 @@
     <!-- 文字喵 -->
     <h1 id="headline" class="head-picture-font" >喵&nbsp;呜~&nbsp;喵&nbsp;帕&nbsp;斯~！</h1>
     <!-- 旋转小陀螺头像 -->
-    <div class="head-sculpture"><img src="../static/img/maoer.gif" class="header-img-one"/></div>
+    <div class="head-sculpture"><img src="http://seaguller.oss-cn-beijing.aliyuncs.com/static/maoer.gif" class="header-img-one"/></div>
     <!-- 指定页面跳转位置 -->
     <div id="turn-head"></div>
     <!-- 小名片（随页面滚动的哦） -->
@@ -190,7 +190,7 @@
                 <li id="article-comment-list-li">
                     <div>
                         <div class="article-comment-list-left">
-                            <img class="article-comment-headimg" src="../static/img/header.jpg" />
+                            <img class="article-comment-headimg" src="http://seaguller.oss-cn-beijing.aliyuncs.com/headImg/cc5d76e15a0144f4ba911ca27889e88c.jpeg" />
                         </div>
                         <div class="article-comment-list-right">
                             <span class="comment-right-name">Seaguller大魔王</span>
@@ -219,7 +219,7 @@
                             <li>
                                 <div>
                                     <div class="article-comment-list-left">
-                                        <img class="article-comment-headimg" src="../static/img/header.jpg" />
+                                        <img class="article-comment-headimg" src="http://seaguller.oss-cn-beijing.aliyuncs.com/headImg/cc5d76e15a0144f4ba911ca27889e88c.jpeg" />
                                     </div>
                                     <div class="article-comment-list-right">
                                         <span class="comment-right-name">Seaguller大魔王</span>
@@ -299,10 +299,12 @@
 <script src="https://lib.baomitu.com/raphael/2.2.7/raphael.min.js"></script>
 <script src="https://lib.baomitu.com/js-sequence-diagrams/1.0.6/sequence-diagram-min.js"></script>
 <script src="https://lib.baomitu.com/flowchart/1.11.3/flowchart.min.js"></script>
-<!-- 字体阴影特效 -->
-<script type="text/javascript" src="../static/js/shine.min.js"></script>
+
+
 <!-- 标题栏浮动隐藏JS -->
 <script type="text/javascript" src="https://npmcdn.com/headroom.js@0.9.3/dist/headroom.min.js"></script>
+<!-- 字体阴影特效 -->
+<script type="text/javascript" src="../static/js/shine.min.js"></script>
 <!-- 主页JS -->
 <script src="../static/js/main.js" type="text/javascript"></script>
 <script src="https://cdn.bootcss.com/pagedown/1.0/Markdown.Converter.min.js"></script>
