--- a/src/main/resources/templates/error/403.html
+++ b/src/main/resources/templates/error/403.html
@@ -25,7 +25,7 @@
 <body>
 <div id="main-class-text">
     <!-- 主页大图 -->
-    <div id="table-picture" style="background-image: url('https://seaguller.oss-cn-beijing.aliyuncs.com/bk-1.jpg')"></div>
+    <div id="table-picture" style="background-image: url('https://seaguller.oss-cn-beijing.aliyuncs.com/static/bk-1.jpg')"></div>
     <!-- 标题栏 -->
     <div class="head-one">
         <header class="am-topbar am-topbar-inverse am-topbar-fixed-top">
@@ -33,7 +33,7 @@
                 <div class="am-collapse am-topbar-collapse" id="doc-topbar-collapse-4">
                     <ul class="am-nav am-nav-pills am-topbar-nav">
                         <a id="header-text" href="/">Seaguller的小窝~</a>
-                        <li class="am-active" id="li-main">
+                        <li id="li-main">
                             <a href="/" class="header-a-main" id="header-a-main-one">
                                 <span class="am-icon-home">&nbsp;首&nbsp;&nbsp;页</span>
                             </a>
@@ -41,7 +41,7 @@
                         <li id="li-archive"><a href="/archive" class="header-a-main" id="header-a-main-archive"><span class="am-icon-archive">&nbsp;归&nbsp;&nbsp;档</span></a></li>
                         <li id="li-update"><a href="/update" class="header-a-main" id="header-a-main-update"><span class="am-icon-calendar-plus-o">&nbsp;更&nbsp;&nbsp;新</span></a></li>
                         <li id="li-music"><a href="/music" class="header-a-main" id="header-a-main-music"><span class="am-icon-music">&nbsp;音乐馆</span></a></li>
-                        <li id="li-message"><a href="#turn-head" class="header-a-main" id="header-a-main-message"><span class="am-icon-pencil">&nbsp;留言板</span></a></li>
+                        <li id="li-message"><a href="/messageBoard" class="header-a-main" id="header-a-main-message"><span class="am-icon-pencil">&nbsp;留言板</span></a></li>
                         <li id="li-friends"><a href="/friends" class="header-a-main" id="header-a-main-friends"><span class="am-icon-mars">&nbsp;友&nbsp;&nbsp;链</span></a></li>
                         <li id="li-aboutMe"><a href="/aboutMe" class="header-a-main" id="header-a-main-aboutMe"><span class="am-icon-paper-plane-o">&nbsp;关于俺</span></a></li>
                     </ul>
@@ -97,12 +97,12 @@
     <!-- 文字喵 -->
     <h1 id="headline" class="head-picture-font" >喵&nbsp;呜~&nbsp;喵&nbsp;帕&nbsp;斯~！</h1>
     <!-- 旋转小陀螺头像 -->
-    <div class="head-sculpture"><img src="../../static/img/maoer.gif" class="header-img-one"/></div>
+    <div class="head-sculpture"><img src="../http://seaguller.oss-cn-beijing.aliyuncs.com/static/maoer.gif" class="header-img-one"/></div>
     <!-- 指定页面跳转位置 -->
     <div id="turn-head"></div>
     <!-- 主体内容 -->
     <div id="art-list">
-        <img src="../../static/img/403.png" style="width: 700px;margin-bottom: 80px;margin-left: -130px;"/>
+        <img src="http://seaguller.oss-cn-beijing.aliyuncs.com/static/403.png" style="width: 700px;margin-bottom: 80px;margin-left: -130px;"/>
         <div style="margin-top: -80px;">
             <div class="error-text">您好像并麻油权限访问这个页面哟~w(゜Д゜)w</div>
             <div class="error-text" style="margin-left: 50px;">不如玩个游戏放松一下(`・ω・´)~</div>
@@ -153,7 +153,7 @@
 
 <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/amazeui/2.7.2/js/amazeui.min.js"></script>
-<!-- 字体阴影特效 -->
+
 <script type="text/javascript" src="../../static/js/shine.min.js"></script>
 <!-- 标题栏浮动隐藏JS -->
 <script type="text/javascript" src="https://npmcdn.com/headroom.js@0.9.3/dist/headroom.min.js"></script>
