--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -96,7 +96,7 @@
     <!-- 文字喵 -->
     <h1 id="headline" class="head-picture-font" >喵&nbsp;呜~&nbsp;喵&nbsp;帕&nbsp;斯~！</h1>
     <!-- 旋转小陀螺头像 -->
-    <div class="head-sculpture"><img src="../static/img/maoer.gif" class="header-img-one"/></div>
+    <div class="head-sculpture"><img src="http://seaguller.oss-cn-beijing.aliyuncs.com/static/maoer.gif" class="header-img-one"/></div>
     <!-- 指定页面跳转位置 -->
     <div id="turn-head"></div>
     <!-- 小名片（随页面滚动的哦） -->
@@ -112,7 +112,7 @@
                 <div class="card-my-head">
                     <div class="head-card-img-div">
                         <div class="card-head-left-img">
-                            <img src="../static/img/header.jpg" id="head-card-img"/>
+                            <img src="http://seaguller.oss-cn-beijing.aliyuncs.com/headImg/cc5d76e15a0144f4ba911ca27889e88c.jpeg" id="head-card-img"/>
                         </div>
                     </div>
                     <div class="card-head-right-word">
@@ -137,7 +137,7 @@
                 </ul>
                 <div class="card-weixin-divout">
                     <div class="card-weixin-divin"></div>
-                    <img src="../static/img/weixin.gif" id="weixin-img"/>
+                    <img src="http://seaguller.oss-cn-beijing.aliyuncs.com/static/weixin.gif" id="weixin-img"/>
                 </div>
             </div>
         </div>
