--- a/src/main/resources/templates/aboutMe.html
+++ b/src/main/resources/templates/aboutMe.html
@@ -25,7 +25,7 @@
 <body>
 <div id="main-class-text">
     <!-- 主页大图 -->
-    <div id="table-picture" style="background-image: url('https://seaguller.oss-cn-beijing.aliyuncs.com/bk-1.jpg')"></div>
+    <div id="table-picture" style="background-image: url('https://seaguller.oss-cn-beijing.aliyuncs.com/static/bk-1.jpg')"></div>
     <!-- 标题栏 -->
     <div class="head-one">
         <header class="am-topbar am-topbar-inverse am-topbar-fixed-top">
@@ -97,7 +97,7 @@
     <!-- 文字喵 -->
     <h1 id="headline" class="head-picture-font" >喵&nbsp;呜~&nbsp;喵&nbsp;帕&nbsp;斯~！</h1>
     <!-- 旋转小陀螺头像 -->
-    <div class="head-sculpture"><img src="../static/img/maoer.gif" class="header-img-one"/></div>
+    <div class="head-sculpture"><img src="http://seaguller.oss-cn-beijing.aliyuncs.com/static/maoer.gif" class="header-img-one"/></div>
     <!-- 指定页面跳转位置 -->
     <div id="turn-head"></div>
     <!-- 小名片（随页面滚动的哦） -->
@@ -111,7 +111,7 @@
                 <div class="card-my-head">
                     <div class="head-card-img-div">
                         <div class="card-head-left-img">
-                            <img src="../static/img/header.jpg" id="head-card-img"/>
+                            <img src="http://seaguller.oss-cn-beijing.aliyuncs.com/headImg/cc5d76e15a0144f4ba911ca27889e88c.jpeg" id="head-card-img"/>
                         </div>
                     </div>
                     <div class="card-head-right-word">
@@ -136,7 +136,7 @@
                 </ul>
                 <div class="card-weixin-divout">
                     <div class="card-weixin-divin"></div>
-                    <img src="../static/img/weixin.gif" id="weixin-img"/>
+                    <img src="http://seaguller.oss-cn-beijing.aliyuncs.com/static/weixin.gif" id="weixin-img"/>
                 </div>
             </div>
         </div>
@@ -147,7 +147,7 @@
     <!-- 主体内容 -->
     <div id="art-list">
         <div class="aboutMe-list">
-            <div><img src="../static/img/aboutMe.jpg" id="aboutMe-title-img"/></div>
+            <div><img src="http://seaguller.oss-cn-beijing.aliyuncs.com/static/aboutMe/aboutMe.jpg" id="aboutMe-title-img"/></div>
             <div class="aboutMe-title-text">
                 <span class="am-icon-hand-o-right"></span>
                 <div>碎碎念</div>
@@ -156,14 +156,14 @@
                 <p>一个普通的程序员，嗯…没错，这就是我对自己的定位…</p>
                 <p>苹果创始人乔布斯先生曾说过：把每一天当作生命的最后一天来过。</p>
                 <p>嗯…那岂不是可以天天泡在零食与可乐的海洋里，哇，怪不得乔布斯先生每天过的那么幸福，嘻嘻嘻（彻底没救了，捂脸ing...</p>
-                <img src="../static/img/wulian.jpg" class="aboutMe-main-img"/>
+                <img src="http://seaguller.oss-cn-beijing.aliyuncs.com/static/aboutMe/wulian.jpg" class="aboutMe-main-img"/>
                 <p>懒惰真的是最大的原罪，它可以让一个人心安理得的享受安逸的生活却不付出丝毫，却不知享受安逸生活的本身就是最大的付出…</p>
                 <p>付出与收获从不是对等的，我认同这个观点，因为你的付出只有你自己看得见，而收获却是每个人都察觉的到的。</p>
-                <img src="../static/img/chuichui.jpg" class="aboutMe-main-img"/>
+                <img src="http://seaguller.oss-cn-beijing.aliyuncs.com/static/aboutMe/chuichui.jpg" class="aboutMe-main-img"/>
                 <p>我从未想过要成为什么样什么样的伟人，我只是一个普通人，普通的因为他人无意的一句赞赏就会沾沾自喜，普通的因为他人的一句谎言而伤心良久，普通的想让自己周围的人变得更快乐，普通的想让自己每天过的更快乐，普通的笑着面对这个普通的世界。</p>
                 <p>我最理想的生活是坐在落地窗前，喝着咖啡，撸着怀里的猫，让阳光洒满全身，在猫疯狂抱怨怎么还不开饭的时候对着窗外傻笑，嘻嘻嘻…</p>
                 <p>我无法改变这个世界，但我至少可以改变我自己；我无法确定我以后的生活是什么模样，但我起码可以确定我想要什么样的生活，可以确定为了达成这个目标我现在该如何去做。</p>
-                <img src="../static/img/miao.gif" class="aboutMe-main-img"/>
+                <img src="http://seaguller.oss-cn-beijing.aliyuncs.com/static/aboutMe/miao.gif" class="aboutMe-main-img"/>
             </div>
             <div class="aboutMe-main-text" style="margin-top: 40px;">
                 <div class="aboutMe-main-text-like">
@@ -206,7 +206,7 @@
                 <p>每完成一个页面，做出一个功能都会对着电脑傻笑半天，我想，这就是热爱叭！</p>
                 <p>我喜欢敲代码的感觉，就像喜欢薯片和可乐一样，我不想成为他人眼中的技术大牛，我只想成为我自己的骄傲，给自己一份交代。</p>
                 <p>我知道现在的我还远远不够，但或许，下一秒的我，会够上那么一点点呢？以后的事，谁又能说得清。</p>
-                <img src="../static/img/chong.jpg" class="aboutMe-main-img2"/>
+                <img src="http://seaguller.oss-cn-beijing.aliyuncs.com/static/aboutMe/chong.jpg" class="aboutMe-main-img2"/>
             </div>
             <div class="aboutMe-title-text" style="margin-top: 40px;">
                 <span class="am-icon-hand-o-right"></span>
@@ -216,7 +216,7 @@
                 <p>大家对本博客有什么意见或者可改进的地方，哪里出了BUG之类的，都可以通过右上角的"反馈"反馈给我~（或者在留言板上给我留言）</p>
                 <p>我一定会不闻不…哦不，积极改进的！嘻嘻嘻~</p>
                 <p>另外，如果对本人有意见的，请拿零食砸死我叭！</p>
-                <img src="../static/img/mm.jpg" class="aboutMe-main-img3"/>
+                <img src="http://seaguller.oss-cn-beijing.aliyuncs.com/static/aboutMe/mm.jpg" class="aboutMe-main-img3"/>
             </div>
         </div>
     </div>
@@ -260,10 +260,12 @@
 </footer>
 <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/amazeui/2.7.2/js/amazeui.min.js"></script>
-<!-- 字体阴影特效 -->
-<script type="text/javascript" src="../static/js/shine.min.js"></script>
+
+
 <!-- 标题栏浮动隐藏JS -->
 <script type="text/javascript" src="https://npmcdn.com/headroom.js@0.9.3/dist/headroom.min.js"></script>
+<!-- 字体阴影特效 -->
+<script type="text/javascript" src="../static/js/shine.min.js"></script>
 <!-- 主页JS -->
 <script src="../static/js/main.js" type="text/javascript"></script>
 <script src="../static/js/aboutMe.js" type="text/javascript"></script>
