--- a/src/main/resources/templates/messageBoard.html
+++ b/src/main/resources/templates/messageBoard.html
@@ -28,7 +28,7 @@
 <body>
 <div id="main-class-text">
     <!-- 主页大图 -->
-    <div id="table-picture" style="background-image: url('https://seaguller.oss-cn-beijing.aliyuncs.com/bk-1.jpg')"></div>
+    <div id="table-picture" style="background-image: url('https://seaguller.oss-cn-beijing.aliyuncs.com/static/bk-1.jpg')"></div>
     <!-- 标题栏 -->
     <div class="head-one">
         <header class="am-topbar am-topbar-inverse am-topbar-fixed-top">
@@ -100,7 +100,7 @@
     <!-- 文字喵 -->
     <h1 id="headline" class="head-picture-font" >喵&nbsp;呜~&nbsp;喵&nbsp;帕&nbsp;斯~！</h1>
     <!-- 旋转小陀螺头像 -->
-    <div class="head-sculpture"><img src="../static/img/maoer.gif" class="header-img-one"/></div>
+    <div class="head-sculpture"><img src="http://seaguller.oss-cn-beijing.aliyuncs.com/static/maoer.gif" class="header-img-one"/></div>
     <!-- 指定页面跳转位置 -->
     <div id="turn-head"></div>
     <!-- 小名片（随页面滚动的哦） -->
@@ -116,7 +116,7 @@
                 <div class="card-my-head">
                     <div class="head-card-img-div">
                         <div class="card-head-left-img">
-                            <img src="../static/img/header.jpg" id="head-card-img"/>
+                            <img src="http://seaguller.oss-cn-beijing.aliyuncs.com/headImg/cc5d76e15a0144f4ba911ca27889e88c.jpeg" id="head-card-img"/>
                         </div>
                     </div>
                     <div class="card-head-right-word">
@@ -141,7 +141,7 @@
                 </ul>
                 <div class="card-weixin-divout">
                     <div class="card-weixin-divin"></div>
-                    <img src="../static/img/weixin.gif" id="weixin-img"/>
+                    <img src="http://seaguller.oss-cn-beijing.aliyuncs.com/static/weixin.gif" id="weixin-img"/>
                 </div>
             </div>
         </div>
@@ -152,7 +152,7 @@
     <!-- 主体内容 -->
     <div id="art-list">
         <div class="message-list">
-            <div><img src="../static/img/message.jpg" id="message-title-img"/></div>
+            <div><img src="http://seaguller.oss-cn-beijing.aliyuncs.com/static/message.jpg" id="message-title-img"/></div>
             <div id="message-title-text">
                 <div class="message-title-text-about">❤ 欢迎大家来留言鸭，有任何事情都可以说哦~</div>
                 <div class="message-title-text-about">❤ 博客的问题，意见与想法，都可以和我交流~</div>
@@ -176,7 +176,7 @@
                     <li id="article-comment-list-li">
                         <div>
                             <div class="article-comment-list-left">
-                                <img class="article-comment-headimg" src="../static/img/header.jpg" />
+                                <img class="article-comment-headimg" src="http://seaguller.oss-cn-beijing.aliyuncs.com/headImg/cc5d76e15a0144f4ba911ca27889e88c.jpeg" />
                             </div>
                             <div class="article-comment-list-right">
                                 <span class="comment-right-name" id="comment-right-name-1">Seaguller大魔王</span>
@@ -205,7 +205,7 @@
                                 <li>
                                     <div>
                                         <div class="article-comment-list-left">
-                                            <img class="article-comment-headimg" src="../static/img/header.jpg" />
+                                            <img class="article-comment-headimg" src="http://seaguller.oss-cn-beijing.aliyuncs.com/headImg/cc5d76e15a0144f4ba911ca27889e88c.jpeg" />
                                         </div>
                                         <div class="article-comment-list-right">
                                             <span class="comment-right-name" id="comment-right-name-1-1">Seaguller大魔王</span>
@@ -280,10 +280,12 @@
 
 <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/amazeui/2.7.2/js/amazeui.min.js"></script>
-<!-- 字体阴影特效 -->
-<script type="text/javascript" src="../static/js/shine.min.js"></script>
+
+
 <!-- 标题栏浮动隐藏JS -->
 <script type="text/javascript" src="https://npmcdn.com/headroom.js@0.9.3/dist/headroom.min.js"></script>
+<!-- 字体阴影特效 -->
+<script type="text/javascript" src="../static/js/shine.min.js"></script>
 <!-- 主页JS -->
 <script src="../static/js/main.js" type="text/javascript"></script>
 <script src="../static/js/messageBoard.js" type="text/javascript"></script>
