--- a/src/main/resources/templates/typePage.html
+++ b/src/main/resources/templates/typePage.html
@@ -27,7 +27,7 @@
 <input id="typeName" type="hidden" th:value="${type}" />
 <div id="main-class-text">
     <!-- 主页大图 -->
-    <div id="table-picture" style="background-image: url('https://seaguller.oss-cn-beijing.aliyuncs.com/bk-1.jpg')"></div>
+    <div id="table-picture" style="background-image: url('https://seaguller.oss-cn-beijing.aliyuncs.com/static/bk-1.jpg')"></div>
     <!-- 标题栏 -->
     <div class="head-one">
         <header class="am-topbar am-topbar-inverse am-topbar-fixed-top">
@@ -99,7 +99,7 @@
     <!-- 文字喵 -->
     <h1 id="headline" class="head-picture-font" >喵&nbsp;呜~&nbsp;喵&nbsp;帕&nbsp;斯~！</h1>
     <!-- 旋转小陀螺头像 -->
-    <div class="head-sculpture"><img src="../static/img/maoer.gif" class="header-img-one"/></div>
+    <div class="head-sculpture"><img src="http://seaguller.oss-cn-beijing.aliyuncs.com/static/maoer.gif" class="header-img-one"/></div>
     <!-- 指定页面跳转位置 -->
     <div id="turn-head"></div>
     <!-- 小名片（随页面滚动的哦） -->
@@ -185,10 +185,12 @@
 
 <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/amazeui/2.7.2/js/amazeui.min.js"></script>
-<!-- 字体阴影特效 -->
-<script type="text/javascript" src="../static/js/shine.min.js"></script>
+
+
 <!-- 标题栏浮动隐藏JS -->
 <script type="text/javascript" src="https://npmcdn.com/headroom.js@0.9.3/dist/headroom.min.js"></script>
+<!-- 字体阴影特效 -->
+<script type="text/javascript" src="../static/js/shine.min.js"></script>
 <!-- 主页JS -->
 <script src="../static/js/main.js" type="text/javascript"></script>
 <script src="../static/js/type.js" type="text/javascript"></script>
