--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,7 +24,7 @@
 <body>
 <div id="main-class-text">
     <!-- 主页大图 -->
-    <div id="table-picture" style="background-image: url('https://seaguller.oss-cn-beijing.aliyuncs.com/bk-1.jpg')"></div>
+    <div id="table-picture" style="background-image: url('https://seaguller.oss-cn-beijing.aliyuncs.com/static/bk-1.jpg')"></div>
     <!-- 标题栏 -->
     <div class="head-one">
             <header class="am-topbar am-topbar-inverse am-topbar-fixed-top">
