--- a/src/main/resources/templates/registerSuccess.html
+++ b/src/main/resources/templates/registerSuccess.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!-- 从该页面发出的请求不会包含referer -->
+    <!-- 从该页面发出的请求不会包含referrer -->
     <meta name="referrer" content="never">
     <title>注册成功！</title>
 
