--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@
     <meta name="description" content="Seaguller的博客登录~">
     <!-- 移动端优化 -->
     <meta name ="viewport" content ="initial-scale=1, maximum-scale=3, minimum-scale=1, user-scalable=no">
-    <!-- 从该页面发出的请求不会包含referer -->
+    <!-- 从该页面发出的请求不会包含referrer -->
     <meta name="referrer" content="never">
     <title>Seaguller的小窝~</title>
     <link href="https://cdn.bootcss.com/amazeui/2.7.2/css/amazeui.min.css" rel="stylesheet">
