--- a/src/main/resources/templates/aboutMe.html
+++ b/src/main/resources/templates/aboutMe.html
@@ -14,7 +14,6 @@
     <meta name ="viewport" content ="initial-scale=1, maximum-scale=3, minimum-scale=1, user-scalable=no">
     <title>Seaguller的小窝~</title>
     <link rel="icon" href="https://seaguller.oss-cn-beijing.aliyuncs.com/static/myIcon.ico" type="image/x-icon"/>
-    <link rel="stylesheet" type="text/css" href="../static/css/loader.css">
 
     <link href="https://cdn.bootcss.com/amazeui/2.7.2/css/amazeui.min.css" rel="stylesheet">
     <link href="../static/css/main.css" rel="stylesheet" />
@@ -262,14 +261,6 @@
     </div>
 </footer>
 
-<!-- 页面加载动画 -->
-<div id="loader-wrapper">
-    <div id="loader"></div>
-    <div class="loader-section section-left"></div>
-    <div class="loader-section section-right"></div>
-    <div class="load_title">努力加载Seaguller站点中<br><span>稍安勿躁，嘻嘻嘻</span></div>
-</div>
-
 <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/amazeui/2.7.2/js/amazeui.min.js"></script>
 
@@ -285,7 +276,7 @@
 <script type="text/javascript" src="https://cdn.bootcss.com/canvas-nest.js/1.0.1/canvas-nest.min.js"></script>　
 
 <!-- live2D -->
-    <script type="text/javascript" src="../static/live2dMod/static/l2d.js"></script>
+    <script type="text/javascript" src="https://seaguller.oss-cn-beijing.aliyuncs.com/static/live2D/static/l2d.js"></script>
     <script type="text/javascript" src="../static/live2dMod/static/pio.js"></script>
     <script type="text/javascript" src="../static/live2d/js/waifu.js"></script>
 
@@ -295,7 +286,7 @@
             "hidden":false,
             "content":{},
             "selector":{"articles":"a.article-title-link"},
-            "model":["../static/live2dMod/models/model.json"]
+            "model":["https://seaguller.oss-cn-beijing.aliyuncs.com/static/live2D/models/model.json"]
         });
     </script>
 <script type="text/javascript">
