--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -212,7 +212,7 @@
     <!-- 背景线条 -->
     <script type="text/javascript" src="https://cdn.bootcss.com/canvas-nest.js/1.0.1/canvas-nest.min.js"></script>　
     <!-- live2D -->
-    <script type="text/javascript" src="../static/live2dMod/static/l2d.js"></script>
+    <script type="text/javascript" src="https://seaguller.oss-cn-beijing.aliyuncs.com/static/live2D/static/l2d.js"></script>
     <script type="text/javascript" src="../static/live2dMod/static/pio.js"></script>
     <script type="text/javascript" src="../static/live2d/js/waifu.js"></script>
 
@@ -222,7 +222,7 @@
             "hidden":false,
             "content":{},
             "selector":{"articles":"a.article-title-link"},
-            "model":["../static/live2dMod/models/model.json"]
+            "model":["https://seaguller.oss-cn-beijing.aliyuncs.com/static/live2D/models/model.json"]
         });
     </script>
 
