--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -1,14 +1,14 @@
 @font-face {
     font-family: "shaonv";
-    src: url('../font/shaonv.ttf');
+    src: url('https://seaguller.oss-cn-beijing.aliyuncs.com/static/font/shaonv.ttf');
 }
 @font-face {
     font-family: "xiaodanchun";
-    src: url('../font/xiaodanchun.ttf');
+    src: url('https://seaguller.oss-cn-beijing.aliyuncs.com/static/font/xiaodanchun.ttf');
 }
 @font-face {
     font-family: "xionghaizi";
-    src: url('../font/xionghaizi.ttf');
+    src: url('https://seaguller.oss-cn-beijing.aliyuncs.com/static/font/xionghaizi.ttf');
 }
 
 .admin-title {
